# llm-misbehave

./: .gitignore  README.md  pyproject.toml
_experiments/: medical_reproduction_agent.py  teenage-supervisor-agent.py
misbehave/: settings.py
misbehave/core/: agent.py  cache.py  db.py  llm.py  shared.py
misbehave/lab/: experiment.py  judge.py  toolbox.py
