[project]
name = "openai-redteaming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "duckdb>=1.3.2",
    "gitpython>=3.1.45",
    "logfire>=4.3.3",
    "openai>=1.99.6",
    "openai-agents>=0.2.8",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.7.4",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "smolagents[toolkit]>=1.21.1",
    "sqlalchemy>=2.0.42",
    "sqlglot>=27.8.0",
]

[tool.pyright]
venv = ".venv"
venvPath = "."

[dependency-groups]
dev = [
    "marimo>=0.15.0",
    "mypy>=1.17.1",
    "pyright>=1.1.403",
    "sqlite-utils>=3.38",
]
